--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -89,7 +89,7 @@
     }
 
     .landing__hero {
-        overflow-y: scroll;
+        overflow-y: auto;
         grid-template-columns: 5% 90% 5%;
         gap: 0;
         &-content {
@@ -101,16 +101,23 @@
         &-description {
             width: 100%;
             padding: 1rem;
-            font-size: 0.9rem;
+            font-size: 1rem;
         }
         &-title {
             h1 {
-                font-size: 1.8rem;
-                line-height: 2.3rem;
+                font-size: 2.5rem;
+                line-height: 2.5rem;
             }
         }
+        &-description {
+            color: var(--gray100);
+        }
         &-image {
-            display: none;
+            position: absolute;
+            left: 0;
+            overflow: hidden;
+            max-width: 100vw;
+            opacity: 0.4;
         }
     }
     .landing__mode {
